--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "5.0.*"
+		"laravel/framework": "5.0.*",
+		"fzaninotto/faker": "^1.6",
+		"barryvdh/laravel-ide-helper": "v2.1.4"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
