--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,4 @@
 {
-<<<<<<< HEAD
 	"name": "laravel/laravel",
 	"description": "The Laravel Framework.",
 	"keywords": ["framework", "laravel"],
@@ -9,7 +8,10 @@
 		"laravel/framework": "5.0.*",
 		"fzaninotto/faker": "^1.6",
 		"barryvdh/laravel-ide-helper": "v2.1.4",
-		"doctrine/dbal": "~2.3"
+		"doctrine/dbal": "~2.3",
+		"doctrine/dbal": "^2.5",
+		"intervention/image": "^2.3",
+		"laravelcollective/html": "^5.2"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
@@ -44,8 +46,7 @@
 	},
 	"config": {
 		"preferred-install": "dist"
-	}
-=======
+	},
     "name": "laravel/laravel",
     "description": "The Laravel Framework.",
     "keywords": ["framework", "laravel"],
@@ -94,5 +95,4 @@
     "config": {
         "preferred-install": "dist"
     }
->>>>>>> fee241fc64ebc2df5f7a6d50f305e0a33acd0009
 }
