--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,9 @@
 		"laravel/framework": "5.0.*",
 		"fzaninotto/faker": "^1.6",
 		"barryvdh/laravel-ide-helper": "v2.1.4",
-		"doctrine/dbal": "~2.3",
 		"doctrine/dbal": "^2.5",
 		"intervention/image": "^2.3",
-		"laravelcollective/html": "^5.2"
+		"laravelcollective/html": "^5.2",
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
